@@ -1,5 +1,10 @@
 2005-01-31  Derek Price  <derek@ximbiot.com>
 
+	* Makefile.am: Back copyright date off since Makefile.am hasn't changed
+	since 2002.
+
+2005-01-31  Derek Price  <derek@ximbiot.com>
+
 	* Makefile.am: Update copyright notices.
 
 2004-04-04  Derek Price  <derek@ximbiot.com>
